--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "caporal": "^0.6.0",
+    "extend": "^3.0.1",
     "inquirer": "^3.2.1",
     "json-dup-key-validator": "^1.0.2"
   }
