--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "caporal": "^0.6.0",
     "extend": "^3.0.1",
     "inquirer": "^3.2.1",
-    "json-dup-key-validator": "^1.0.2"
+    "json-dup-key-validator": "^1.0.2",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
