--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "compile": "tsc -p tsconfig.json",
     "lint": "tslint -p tslint.json",
+    "test": "yarn run lint",
     "prepublish": "yarn run compile && yarn run lint"
   },
   "bin": {
