--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
     "typescript": "^2.5.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
