--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "compile": "tsc -p tsconfig.json",
     "lint": "tslint -p tslint.json",
     "test": "yarn run lint",
-    "prepublish": "yarn run compile && yarn run lint"
+    "prepublish": "yarn run compile && yarn run lint",
+    "package": "yarn run compile && pkg ."
   },
   "bin": {
     "metricly": "js/bin/metricly.js"
@@ -29,6 +30,7 @@
     "@types/node": "^8.0.28",
     "@types/request": "^2.0.3",
     "@types/request-promise": "^4.1.37",
+    "pkg": "^4.3.0-beta.5",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
     "typescript": "^2.5.2"
