--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "inquirer": "^3.2.1",
     "json-dup-key-validator": "^1.0.2",
     "request": "^2.81.0",
-    "request-promise": "^4.2.1"
+    "request-promise": "^4.2.1",
+    "update-notifier": "^2.3.0"
   },
   "devDependencies": {
     "@types/extend": "^2.0.30",
@@ -30,6 +31,7 @@
     "@types/node": "^8.0.28",
     "@types/request": "^2.0.3",
     "@types/request-promise": "^4.1.37",
+    "@types/update-notifier": "^1.0.2",
     "pkg": "^4.3.0-beta.5",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
