--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "compile": "tsc -p tsconfig.json",
     "lint": "tslint -p tslint.json",
-    "test": "nyc mocha",
-    "prepare": "tsc",
-    "pretest": "tsc",
+    "test": "yarn run lint && nyc mocha",
+    "prepare": "yarn run compile",
+    "pretest": "yarn run compile",
     "prepublish": "yarn run compile && yarn run lint",
     "package": "yarn run compile && pkg .",
     "watch": "mocha-typescript-watch"
@@ -20,26 +20,26 @@
   "author": "TheConnMan",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "^4.1.2",
-    "@types/mocha": "^2.2.48",
     "caporal": "^0.9.0",
-    "chai": "^4.1.2",
     "chalk": "^2.3.0",
     "extend": "^3.0.1",
     "inquirer": "^3.2.1",
     "json-dup-key-validator": "^1.0.2",
-    "mocha": "^5.0.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "update-notifier": "^2.3.0"
   },
   "devDependencies": {
     "@types/extend": "^2.0.30",
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^2.2.48",
     "@types/inquirer": "0.0.35",
     "@types/node": "^8.0.28",
     "@types/request": "^2.0.3",
     "@types/request-promise": "^4.1.37",
     "@types/update-notifier": "^1.0.2",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1",
     "mocha-typescript": "^1.1.12",
     "nyc": "^11.4.1",
     "pkg": "^4.3.0-beta.5",
