--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "chalk": "^2.3.0",
     "extend": "^3.0.1",
     "inquirer": "^3.2.1",
+    "is-url": "^1.2.2",
     "json-dup-key-validator": "^1.0.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "update-notifier": "^2.3.0"
   },
   "devDependencies": {
-    "@types/extend": "^2.0.30",
     "@types/chai": "^4.1.2",
-    "@types/mocha": "^2.2.48",
+    "@types/extend": "^2.0.30",
     "@types/inquirer": "0.0.35",
+    "@types/is-url": "^1.2.28",
+    "@types/mocha": "^2.2.48",
     "@types/node": "^8.0.28",
     "@types/request": "^2.0.3",
     "@types/request-promise": "^4.1.37",
