--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "TheConnMan",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^2.1.1",
     "caporal": "^0.9.0",
     "chalk": "^2.3.0",
     "extend": "^3.0.1",
