Fix the TSLint version to avoid config file change errors

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "nyc": "^11.4.1",
     "pkg": "^4.3.0-beta.5",
     "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
+    "tslint": "~5.8.0",
     "typescript": "^2.5.2"
   },
   "nyc": {
