--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "archiver": "^2.1.1",
-    "caporal": "^0.9.0",
+    "caporal": "^0.10.0",
     "chalk": "^2.3.0",
     "extend": "^3.0.1",
     "inquirer": "^3.2.1",
     "is-url": "^1.2.2",
     "json-dup-key-validator": "^1.0.2",
-    "request": "^2.81.0",
+    "moment": "^2.22.2",
+    "request": "^2.87.0",
     "request-promise": "^4.2.1",
     "update-notifier": "^2.3.0"
   },
@@ -43,7 +44,7 @@
     "mocha": "^5.0.1",
     "mocha-typescript": "^1.1.12",
     "nyc": "^11.4.1",
-    "pkg": "^4.3.0-beta.5",
+    "pkg": "^4.3.3",
     "ts-node": "^3.3.0",
     "tslint": "~5.8.0",
     "typescript": "^2.5.2"
