--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.22.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
+    "tty-table": "^2.6.7",
     "update-notifier": "^2.3.0"
   },
   "devDependencies": {
