--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "inquirer": "^3.2.1",
     "is-url": "^1.2.2",
     "json-dup-key-validator": "^1.0.2",
+    "moment": "^2.22.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
+    "tty-table": "^2.6.7",
     "update-notifier": "^2.3.0"
   },
   "devDependencies": {
