Add a package formatter command

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "archiver": "^2.1.1",
     "caporal": "^0.9.0",
     "chalk": "^2.3.0",
+    "clean-deep": "^3.0.2",
     "extend": "^3.0.1",
     "inquirer": "^3.2.1",
     "is-url": "^1.2.2",
     "json-dup-key-validator": "^1.0.2",
+    "json-stable-stringify": "^1.0.1",
     "moment": "^2.22.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
