--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "mocha": "^5.0.1",
     "mocha-typescript": "^1.1.12",
     "nyc": "^11.4.1",
-    "pkg": "^4.3.0-beta.5",
+    "pkg": "^4.4.0",
     "ts-node": "^3.3.0",
     "tslint": "~5.8.0",
     "typescript": "^2.5.2"
